[package]
name = "ic-crypto-tree-hash"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
ic-crypto-internal-types = { path = "../internal/crypto_lib/types" }
ic-crypto-sha2 = { path = "../sha2" }
ic-protobuf = { path = "../../protobuf" }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
criterion = { workspace = true }
maplit = "1.0.2"
proptest = "1.0"
prost = { workspace = true }
rand = { workspace = true }
serde_cbor = { workspace = true }
